# ECE532

./: .gitignore  README.md
Scripts/: CsvConvert.py  RequestTLV.py  TLV_Decode.py  TLV_Encode.py  database_cheatsheet.csv  database_cheatsheet.xlsx  definitions.py  main_script.py  tcp_client_DESL.py  tcp_server_DESL.py  test.csv
Vivado_Projects/FPGA1_tb/: proj_p3.xpr  vivado.jou  vivado_10428.backup.jou  vivado_14908.backup.jou  vivado_3140.backup.jou
Vivado_Projects/FPGA2/DB_Server_Final/: DB_Test7_DDR_4.bit  DB_Test7_DDR_4.xpr  archive_project_summary.txt  vivado.jou
Vivado_Projects/FPGA_1/dm_server/: demo_group.xpr
XilinxSDK/FPGA2/DB_Test15_HW/: .project  T5_wrapper.mmi  download.bit  system.hdf
XilinxSDK/FPGA2/DB_Test_15_SW/: .cproject  .project
XilinxSDK/FPGA2/DB_Test_15_SW_bsp/: .cproject  .project  .sdkproject  system.mss
ip_repo/fpga1_top_1.0/: component.xml
ip_repo/fpga1_top_1.0/src/: access.coe  counter.v  fpga1_top.v  fpga1_top_tb.sv  get_bit.v  horizontal_counter.v  nexy4_ddr.xdc  number.coe  vga_control.v  wait.coe
ip_repo/fpga1_top_master_1.0/: component.xml
ip_repo/fpga1_top_master_1.0/hdl/: fpga1_top_master_v1_0.v  fpga1_top_master_v1_0_M00_AXI.v
ip_repo/fpga1_top_slv_1.0/: component.xml
microblaze/: CMakeLists.txt  TLVUtils.c  TLVUtils.h  TLV_test.c  requestTLV.c  requestTLV.h
microblaze/TCP_client/: main.c
microblaze/TCP_server/: echo.c  main.c  requestTLV.c  server.c  server_helper.c  setup.h
scripts/: RequestTLV.py  TLV_Encode.py  tcp_client_DESL.py  tcp_server_DESL.py
tcpip/: connection.py  main.py  tcp_client.py
(+1252 files in other folders)
